ros/servo controller/ros2_ws/log/build_2024-05-28_13-06-33/my_ax12_servo_controller/stderr.log
  File "/home/ubuntu/ros2_ws/install/my_ax12_servo_controller/lib/python3.10/site-packages/my_ax12_servo_controller/my_ax12_node.py", line 52
    else if command != 32:
         ^^
SyntaxError: expected ':'

